@@ -6,6 +6,7 @@ Version 1.7.3
 - 'File' attribute enabled
 - Fixed not working form when there was only file attribute in it
 - Fixed mandatory validation for File attribute
+- Fixed errors displayed when 'File' attribute remained empty and form was processed
 
 Version 1.7.2
 - 'Select' attribute fixed and enabled
